# neuron

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
docs/: BUILD.md  DISTRIBUTION.md
include/neuron/: ai_client.hpp  cli.hpp  config.hpp
scripts/: build-static.sh
src/: ai_client.cpp  cli.cpp  config.cpp  main.cpp  main.rs
